Fixed icon alignment.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -30,11 +30,13 @@ th{
 
 i.fa.fa-bars{
 	color:white;
-	font-size: 1.385em !important;
+	font-size: 1.25rem !important;
 }
 
 button#sidebarCollapse{
 	background-color:transparent !important;
+	padding-top: 0.3125rem;
+	padding-bottom: 0.3125rem;
 	border: none;
 	cursor:pointer;
 }
